# update-workflows

./: README.md  pyproject.toml  update_workflows.py
.github/: workflows.yml
.github/workflows/: publish.yml  test.yml
tests/: test_update_workflows.py
